# hexagent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
libs/hexagent_channel_dingtalk/: pyproject.toml
libs/hexagent_channel_dingtalk/hexagent_channel_dingtalk/: __init__.py  auth.py  channel.py  config.py  send_service.py
libs/hexagent_demo/backend/: .gitignore  pyproject.toml
libs/hexagent_demo/backend/hexagent_api/: __init__.py  agent_manager.py  config.py  main.py  models.py  paths.py  server.py  store.py
libs/hexagent_demo/backend/hexagent_api/routes/: chat.py  config.py  conversations.py  sessions.py  setup.py  skills.py
libs/hexagent_demo/backend/skills/email-mail-master/scripts/: email_manager.py
libs/hexagent_demo/backend/skills/examples/data-insight-report/: SKILL.md
libs/hexagent_demo/backend/skills/examples/data-insight-report/scripts/: analyze.py  validate_echarts.py
libs/hexagent_demo/backend/skills/examples/deep-research/: SKILL.md
libs/hexagent_demo/backend/skills/examples/doc/: SKILL.md
libs/hexagent_demo/backend/skills/examples/excel-xlsx/: SKILL.md
libs/hexagent_demo/backend/skills/examples/find-skills/: SKILL.md
libs/hexagent_demo/backend/skills/examples/frontend-dev/references/: minimax-voice-catalog.md
libs/hexagent_demo/backend/skills/examples/frontend-dev/templates/: generator_template.js  viewer.html
libs/hexagent_demo/backend/skills/examples/mcp-builder/: SKILL.md
libs/hexagent_demo/backend/skills/examples/skill-creator/: SKILL.md
libs/hexagent_demo/backend/skills/pptx-plus-linux/: LICENSE.txt  editing.md  examin.md  pptxgenjs.md  skill.md
libs/hexagent_demo/backend/skills/pptx-plus-linux/scripts/: ppt_to_pic.py  vision_qwen.py  web_search.py
libs/hexagent_demo/backend/skills/pptx-plus-linux/scripts/office/: soffice.py
libs/hexagent_demo/backend/skills/public/data-insight-report/abilities/: data-analysis.md  echarts-validation.md
libs/hexagent_demo/backend/skills/public/pdf/: SKILL.md
libs/openagent/: pyproject.toml
libs/openagent/notebooks/: getting_started.ipynb
libs/openagent/openagent/: __init__.py  config.py  exceptions.py  tasks.py  types.py
libs/openagent/openagent/computer/: __init__.py  base.py
libs/openagent/openagent/computer/local/: __init__.py  _lima.py  native.py  vm.py
libs/openagent/openagent/computer/remote/: e2b.py
libs/openagent/openagent/harness/: __init__.py  definition.py  environment.py  reminders.py  skill_spec.py  skills.py
libs/openagent/openagent/langchain/: __init__.py  adapter.py  agent.py  middleware.py  subagent.py
libs/openagent/openagent/mcp/: _client.py  _connector.py  _tool.py
libs/openagent/openagent/prompts/: __init__.py  agent_prompt_websearch_summarizer.md  content.py  sections.py  system_prompt_agency.md  system_prompt_doing_tasks.md  system_prompt_environment.md  system_prompt_executing_actions_with_care.md  system_prompt_git_status.md  system_prompt_identity.md  system_prompt_tone_and_style.md  system_prompt_tool_usage_policy.md  system_prompt_using_your_tools.md  system_reminder_suggest_todo_tracking.md  tool_instruction_agent.md  tool_instruction_bash.md  tool_instruction_bash_git_commit_and_pr_creation_instructions.md  tool_instruction_grep.md  tool_instruction_read.md  tool_instruction_skill.md  user_prompt_compaction_request.md  user_prompt_compaction_summary_rebuild.md
libs/openagent/openagent/prompts/fragments/: __init__.py  system_prompt_identity.md  system_prompt_scratchpad_directory.md  tool_instruction_read.md  tool_instruction_taskoutput.md  tool_instruction_taskstop.md
libs/openagent/openagent/runtime/: __init__.py  context.py  permission.py  prompt.py  registry.py  reminder.py  skills.py
libs/openagent/openagent/tools/: __init__.py  base.py  skill.py
libs/openagent/openagent/tools/cli/: __init__.py  bash.py  edit.py  glob.py  grep.py  read.py  write.py
libs/openagent/openagent/tools/task/: __init__.py  agent.py  output.py  stop.py
libs/openagent/openagent/tools/ui/: __init__.py  present_to_user.py
libs/openagent/openagent/tools/web/: __init__.py  _cache.py  fetch.py  search.py
libs/openagent/openagent/tools/web/providers/: __init__.py
libs/openagent/openagent/tools/web/providers/fetch/: __init__.py  firecrawl.py  jina.py
libs/openagent/openagent/tools/web/providers/search/: __init__.py  base.py  brave.py  tavily.py
libs/openagent/sandbox/docker/: Dockerfile
libs/openagent/sandbox/vm/lima/: openagent.yaml
libs/openagent/sandbox/vm/setup/: setup.sh
libs/openagent/sandbox/vm/setup/steps/: 02_nodejs.sh  04_npm.sh  05_pip.sh
libs/openagent/tests/integration_tests/: test_end_to_end.py
libs/openagent/tests/integration_tests/computer/: test_e2b_reconnect.py
libs/openagent/tests/unit_tests/: conftest.py  test_config.py  test_end_to_end.py  test_tasks.py  test_types.py
libs/openagent/tests/unit_tests/computer/: test_e2b.py  test_native.py  test_protocol.py  test_vm.py
libs/openagent/tests/unit_tests/harness/: test_model.py  test_permission.py  test_reminders.py  test_skill_spec.py  test_skills.py
libs/openagent/tests/unit_tests/langchain/: test_adapter.py  test_middleware.py
libs/openagent/tests/unit_tests/mcp/: test_client.py  test_connector.py
libs/openagent/tests/unit_tests/prompts/: test_content.py  test_sections.py
libs/openagent/tests/unit_tests/runtime/: __init__.py  test_context.py  test_permission.py  test_prompt.py  test_registry.py  test_reminder.py  test_skills.py
libs/openagent/tests/unit_tests/tools/: test_agent.py  test_cli.py  test_skill.py  test_tasks.py
libs/openagent/tests/unit_tests/tools/cli/: test_bash.py  test_edit.py  test_glob.py  test_grep.py  test_read.py  test_write.py
libs/openagent/tests/unit_tests/tools/ui/: test_present_to_user.py
libs/openagent/tests/unit_tests/tools/web/: test_cache.py  test_fetch.py  test_markdown.py  test_search.py  test_validation.py
libs/openagent/tests/unit_tests/tools/web/providers/: test_retry.py
libs/openagent/tests/unit_tests/tools/web/providers/fetch/: test_firecrawl.py  test_jina.py
notebooks/: prompt_system_demo.ipynb
(+282 files in other folders)
