[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hexagent-channel-dingtalk"
dynamic = ["version"]
description = "DingTalk (钉钉) messaging channel for HexAgent via Stream mode"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "Anqi (Anthony) Tang", email = "anqi.tang.ai@gmail.com" }
]
dependencies = [
    "hexagent>=0.0.0",
    "dingtalk-stream>=1.0.0",
    "httpx>=0.27.0",
    "langchain-core>=1.2.0,<2.0.0",
]

[project.urls]
Repository = "https://github.com/an7tang/hexagent"

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.2,<0.13.0",
    "mypy>=1.18.1,<1.19.0",
]

[tool.hatch.version]
source = "vcs"
tag-pattern = "hexagent-channel-dingtalk==(?P<version>.*)"
raw-options = { root = "../.." }
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["hexagent_channel_dingtalk"]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "PLR0913",
    "C901",
    "D1",
    "ANN",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
