[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openagent"
dynamic = ["version"]
description = "A general-purpose agent harness that gives LLM agents a CLI-based computer to complete tasks the way humans do"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "Anqi (Anthony) Tang", email = "anqi.tang.ai@gmail.com" }
]
dependencies = [
    "langchain-core>=1.2.6,<2.0.0",
    "langchain>=1.2.3,<2.0.0",
    "langchain-anthropic>=1.3.1,<2.0.0",
    "langchain-openai>=1.0.2,<2.0.0",
    "wcmatch",
    "e2b>=2.0.0,<3.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "cachetools>=5.0.0",
]

[project.urls]
Repository = "https://github.com/an7tang/openagent"
Issues = "https://github.com/an7tang/openagent/issues"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff>=0.12.2,<0.13.0",
    "mypy>=1.18.1,<1.19.0",
    "pytest-asyncio>=1.3.0",
    "types-cachetools",
]

[tool.hatch.version]
source = "vcs"
tag-pattern = "openagent==(?P<version>.*)"
raw-options = { root = "../.." }
fallback-version = "0.0.0"

[tool.hatch.build.targets.sdist]
include = [
    "/openagent",
]

[tool.hatch.build.targets.wheel]
packages = ["openagent"]

[tool.ruff]
line-length = 150
# Exclude any files that shouldn't be linted
exclude = []

[tool.ruff.format]
docstring-code-format = true  # Formats code blocks in docstrings

[tool.ruff.lint]
select = [
    "ALL"  # Enable all rules by default
]
ignore = [
    "COM812",  # Messes with the formatter
    "ISC001",  # Messes with the formatter
    "PERF203", # Rarely useful
    "PLC0415", # Imports should be at the top. Not always desirable
    "PLR0913", # Too many arguments in function definition
    "PLC0414", # Inconsistent with how type checkers expect to be notified of intentional re-exports
    "C901",    # Too complex
]
unfixable = ["B028"]  # Rules that shouldn't be auto-fixed

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"  # Google-style docstrings
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "D1",      # Skip documentation rules in tests
    "S101",    # Allow asserts in tests
    "S311",    # Allow pseudo-random generators in tests
    "SLF001",  # Private member access - tests often verify internal state
]

# Production files
"openagent/tools/web/providers/_retry.py" = ["PLR2004"]
"openagent/tools/web/providers/fetch/jina.py" = ["EM101", "EM102", "TRY003"]
"openagent/tools/web/providers/fetch/firecrawl.py" = ["EM101", "EM102", "TRY003"]
"openagent/tools/web/providers/search/tavily.py" = ["EM101", "EM102", "TRY003"]
"openagent/tools/web/providers/search/brave.py" = ["EM101", "EM102", "TRY003"]

# Notebooks - ignore all linting for demo notebooks
"notebooks/*" = ["ALL"]

# Test files
"tests/unit_tests/chat_model.py" = ["ARG002", "D301", "PLR0912", "RUF012"]
"tests/unit_tests/test_end_to_end.py" = ["ARG002", "PLR2004"]
"tests/unit_tests/tools/cli/test_glob.py" = ["PLR2004"]
"tests/unit_tests/tools/web/test_validation.py" = ["S104"]  # Test data for IP validation, not actual binding

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = ["deprecated"]
exclude = ["sandbox/"]
# Optional: reduce strictness if needed
disallow_any_generics = false
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
